# embedcode

./: .gitignore  Makefile  link.ld  readme.md  run.sh
rust/: Cargo.toml
rust/src/: lib.rs
src/: deplay.c  deplay.h  gpio.c  gpio.h  main.c  startup.s  uart.c  uart.h
